--- a/src/formboat.css
+++ b/src/formboat.css
@@ -3,7 +3,7 @@
 }
 .chat-box {
     width: 400px;
-    margin: 30px auto;
+    /* margin: 30px auto; */
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
@@ -15,22 +15,24 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 15px;
+    /* padding: 0 15px; */
     background: var(--chat_color1);
     color: white;
+    padding: 5px 3px;
 }
-.chat-header h3{
-    margin-bottom: 2px;
+.chat-header h6{
+    margin-bottom: 0px;
+    margin-left: 2px;
 }
 
 .chat-actions button {
-    background: white;
+    /* background: white; */
     color: var(--chat_color1);
     border: none;
     border-radius: 5px;
-    padding: 5px 10px;
+    /* padding: 1px 10px; */
     cursor: pointer;
-    margin-left: 5px;
+    /* margin-left: 5px; */
     transition: 0.3s;
 }
 .chat-actions button:hover {
@@ -95,8 +97,8 @@
 
 #chat-container {
     height: 100%;
-    min-height: 400px;
-    width: 400px;
+    /* min-height: 400px; */
+    width: 100%;
     background: white;
     border-radius: 16px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
